# rules_quickjs_bind_gen

./: .gitignore  MODULE.bazel
.github/workflows/: build.yaml
example/: BUILD.bazel  demo.cc  my_api.cpp  my_api.h
rules/: defs.bzl
tools/: BUILD.bazel  qjs_bind_gen.cc  qjs_utils.hpp
