load("@rules_cc//cc:cc_binary.bzl", "cc_binary")

cc_library(
    name = "qjs_utils",
    hdrs = ["qjs_utils.hpp"],
    includes = ["."],
    visibility = ["//visibility:public"],
    deps = ["@quickjs-ng"],
)

cc_binary(
    name = "qjs_bind_gen",
    srcs = ["qjs_bind_gen.cc"],
    visibility = ["//visibility:public"],
    deps = [
        "@boost.algorithm",
        "@boost.filesystem",
    ],
)
